crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__operator__multiply.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/operator/multiply.lox
---
success: true
exit_code: 0
----- stdout -----
15
3.702

----- stderr -----
