crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__operator__negate.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/operator/negate.lox
---
success: true
exit_code: 0
----- stdout -----
-3
3
-3

----- stderr -----
