crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__operator__not.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/operator/not.lox
---
success: true
exit_code: 0
----- stdout -----
false
true
true
false
false
true
false
false

----- stderr -----
