crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__operator__not_equals.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/operator/not_equals.lox
---
success: true
exit_code: 0
----- stdout -----
false
false
true
false
true
false
true
true
true
true

----- stderr -----
