crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__operator__subtract.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/operator/subtract.lox
---
success: true
exit_code: 0
----- stdout -----
1
0

----- stderr -----
